helm/charts/plex/plex-statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: plex-media-server
  labels:
    name: plex-media-server
    app: plex-media-server
    helm.sh/chart: plex-media-server-0.8.0
    app.kubernetes.io/name: plex-media-server
    app.kubernetes.io/instance: plex-media-server
    app.kubernetes.io/version: "1.41.3"
    app.kubernetes.io/managed-by: Helm
spec:
  serviceName: plex-media-server
  selector:
    matchLabels:
      app.kubernetes.io/name: plex-media-server
      app.kubernetes.io/instance: plex-media-server
  template:
    metadata:
      labels:
        app: plex-media-server
        helm.sh/chart: plex-media-server-0.8.0
        app.kubernetes.io/name: plex-media-server
        app.kubernetes.io/instance: plex-media-server
        app.kubernetes.io/version: "1.41.3"
        app.kubernetes.io/managed-by: Helm
      annotations:
        {}
    spec:
      serviceAccountName: plex-media-server
      tolerations:
        []
      nodeSelector:
        {}
      affinity:
        {}
      volumes:
      - name: pms-transcode
        emptyDir: {}
      - name: dev-dri
        hostPath:
          path: /dev/dri
      - name: vol2
        hostPath:
          path: /mnt/vol2
      - name: vol3
        hostPath:
          path: /mnt/vol3
      - name: vol4
        hostPath:
          path: /mnt/vol4
      - name: vol5
        hostPath:
          path: /mnt/vol5
      - name: vol6
        hostPath:
          path: /mnt/vol6
      terminationGracePeriodSeconds: 120
      containers:
      - name: plex-media-server-pms
        image: index.docker.io/plexinc/pms-docker:latest
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 32400
          name: plex
        - containerPort: 8324
          name: plex-roku
        - containerPort: 32469
          name: plex-dlna
        - containerPort: 1900
          name: plex-upnp
          protocol: UDP
        - containerPort: 32410
          name: plex-gdm-1
          protocol: UDP
        - containerPort: 32412
          name: plex-gdm-2
          protocol: UDP
        - containerPort: 32413
          name: plex-gdm-3
          protocol: UDP
        - containerPort: 32414
          name: plex-gdm-4
          protocol: UDP          
        volumeMounts:
        - name: pms-config
          mountPath: /config
        - name: pms-transcode
          mountPath: /transcode
        - name: dev-dri
          mountPath: /dev/dri
          readOnly: true
        - name: vol2
          mountPath: /Drive1
          readOnly: true
        - name: vol3
          mountPath: /Drive2
          readOnly: true
        - name: vol4
          mountPath: /Drive3
          readOnly: true
        - name: vol5
          mountPath: /Drive4
          readOnly: true         
        - name: vol6
          mountPath: /Drive5
          readOnly: true
  volumeClaimTemplates:
  - metadata:
      name: pms-config
    spec:
      accessModes: [ "ReadWriteOnce" ]
      resources:
        requests:
          storage: 10Gi
